# pargus

./: .gitignore  README.md  start.bat
api/: README.md  __init__.py  config.py  engine.py  main.py  models.py  requirements.txt
benchmarks/: README.md  generate_dataset.py  plot_speedup.py  run_benchmark.py
context/: remaining-work.md
data/: sample_corpus.txt  stopwords.txt
data/sample/: essay_01.txt  essay_02.txt  essay_03.txt
engine/: CMakeLists.txt  README.md  main.c
engine/common/: errors.h  string_utils.c  string_utils.h  timing.c  timing.h  types.h
engine/config/: args.c  args.h  config.h
engine/io/: reader.c  reader.h  writer.c  writer.h
engine/nlp/: lsh.c  lsh.h  minhash.c  minhash.h  ngram.c  ngram.h  similarity.c  similarity.h  stopwords.c  stopwords.h  tfidf.c  tfidf.h  tokenizer.c  tokenizer.h
engine/parallel/: cache_pad.h  doc_queue.c  doc_queue.h  work_queue.c  work_queue.h
engine/tests/: test_minhash_lsh.c  test_similarity.c  test_tfidf.c  test_tokenizer.c  test_writer_escape.c
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/benchmark/: page.tsx
frontend/app/jobs/[jobId]/: page.tsx
frontend/app/results/[jobId]/: page.tsx
frontend/components/: Navbar.tsx  SimilarityHeatmap.tsx  SpeedupChart.tsx
frontend/lib/: api.ts
